--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="buttons">
         <div class="button" onclick="CreateA4(1)">贪吃蛇（无障碍）</div>
         <div class="button" onclick="CreateA4(2)">贪吃蛇（有障碍）</div>
-        <div class="button" onclick="CreateA4(3)">画方格</div>
+        <div class="button" onclick="CreateA4(3)">画方格（点格棋）</div>
     </div>
     <div class="board">
         <canvas id="board" width="1754" height="1240" style="border: 1px solid #000;"></canvas>
