--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="button" onclick="CreateA4(1)">贪吃蛇（无障碍）</div>
         <div class="button" onclick="CreateA4(2)">贪吃蛇（有障碍）</div>
         <div class="button" onclick="CreateA4(3)">画方格（点格棋）</div>
+        <div class="button" onclick="CreateA4(4)">开心消消乐</div>
     </div>
     <div class="board">
         <canvas id="board" width="1754" height="1240" style="border: 1px solid #000;"></canvas>
@@ -34,7 +35,7 @@
             <li>点击上面按钮--&gt;在弹出的图上长按--&gt;保存图片到手机。</li>
             <li>适用A4纸张打印。</li>
             <li>程序完全免费，欢迎分享。</li>
-            <li>当前版本 v2.0</li>
+            <li>当前版本 v3.0</li>
             <li>微信公众号:"二头乌游戏"</li>
             <li>email: eattonton@qq.com</li>
             <li>Supported By TriWeb.cn</li>
